--- a/index.css
+++ b/index.css
@@ -9,8 +9,12 @@ body {
     height: 100vh;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    row-gap: 1rem;
+    column-gap: 1rem;
+
 }
 
 .hello {
