--- a/index.css
+++ b/index.css
@@ -16,7 +16,35 @@ body {
     column-gap: 1rem;
 
 }
+.container {
+    width: 100%;
+    height: 100vh;
 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.main {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-bottom: 1rem;
+}
+.footer__text {
+    font-weight: 500;
+}
 .hello {
     font-style: normal;
     font-size: 2rem;
