--- a/index.css
+++ b/index.css
@@ -31,6 +31,15 @@ body {
     flex-direction: column;
     align-items: center;
 }
+.js{
+    margin-bottom: 1rem;
+}
+.main__btn {
+    border-radius: 1rem;
+    width: 5rem;
+    height: 2rem;
+    border: none;
+}
 .footer {
     display: flex;
     justify-content: center;
