--- a/index.css
+++ b/index.css
@@ -39,6 +39,12 @@ body {
     width: 5rem;
     height: 2rem;
     border: none;
+    background: #1860f1;
+    box-shadow: .5rem .5rem .5rem 0rem rgba(164, 215, 255, 0.2);
+}
+.main__btn:active {
+    box-shadow: none;
+    transform: translateX(.1rem) translateY(.1rem);
 }
 .footer {
     display: flex;
