--- a/index.css
+++ b/index.css
@@ -24,6 +24,37 @@ body {
     align-items: center;
     flex-direction: column;
 }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+
+    height: 4rem;
+    background: #5f5f5f;
+
+    padding: 2rem;
+}
+.header__navbar {
+
+}
+.header__navbar-list {
+    display: flex;
+}
+.header__navbar-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 3rem;
+
+    text-align: center;
+    text-decoration: none;
+
+}
 .main {
     height: 100%;
     display: flex;
@@ -39,7 +70,7 @@ body {
     width: 5rem;
     height: 2rem;
     border: none;
-    background: #1860f1;
+    background: rgb(0, 229, 255);
     box-shadow: .5rem .5rem .5rem 0rem rgba(164, 215, 255, 0.2);
 }
 .main__btn:active {
