--- a/index.css
+++ b/index.css
@@ -49,11 +49,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 3rem;
-
+    text-align: center;
+    margin-right: .5rem;
+    cursor: pointer;
+    
+    border: none;
+    border-radius: .4rem;
+    background: none;
+    
+    width: 4.5rem;
+    height: 2rem;
+    
     text-align: center;
     text-decoration: none;
-
+    white-space: nowrap;
+}
+.header__navbar-item:active {
+    /* background-color: #7f7f7f; */
+    box-shadow: -6px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    transform: translateY(.1rem) translateX(-.1rem);
 }
 .main {
     height: 100%;
@@ -91,6 +105,7 @@ body {
 .footer__text {
     font-weight: 500;
 }
+
 .hello {
     font-style: normal;
     font-size: 2rem;
