--- a/index.css
+++ b/index.css
@@ -110,3 +110,12 @@ body {
     font-style: normal;
     font-size: 2rem;
 }
+
+
+
+.main__block {
+    margin-bottom: 1rem;
+}
+.main__circle {
+    margin-bottom: 1rem;
+}
