--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ body {
 .container {
     width: 100%;
     height: 100vh;
+    padding: 5rem;
 
     display: flex;
     align-items: center;
@@ -40,6 +41,19 @@ body {
     background: #5f5f5f;
 
     padding: 2rem;
+}
+.header__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header__logo-pic {
+    height: 3rem;
+    width: 3rem;
+    margin-right: .4rem;
+}
+.header__logo-text {
+
 }
 .header__navbar {
 
@@ -72,14 +86,12 @@ body {
     transform: translateY(.1rem) translateX(-.1rem);
 }
 .main {
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 13rem;
-    margin-bottom: 10rem;
 }
 .js{
     margin-bottom: 1rem;
@@ -143,4 +155,8 @@ body {
 
     margin-bottom: 1rem;
     padding: 1rem;
+    transition: .2s ease-in;
+}
+.main__user:hover {
+    transform: scale(1.1);
 }
