--- a/index.css
+++ b/index.css
@@ -38,9 +38,11 @@ body {
     left: 0;
 
     height: 4rem;
-    background: #5f5f5f;
+    background: #858585;
 
     padding: 2rem;
+    box-shadow: 4px 4px 16px 16px rgba(82, 82, 82, 0.3);
+
 }
 .header__logo {
     display: flex;
@@ -79,10 +81,12 @@ body {
     text-align: center;
     text-decoration: none;
     white-space: nowrap;
+
+    box-shadow: -4px 4px 4px 0px rgba(34, 60, 80, 0.1);
 }
 .header__navbar-item:active {
     /* background-color: #7f7f7f; */
-    box-shadow: -6px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: none;
     transform: translateY(.1rem) translateX(-.1rem);
 }
 .main {
